--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
-  "printWidth": 100,
-  "tabWidth": 4,
+  "printWidth": 80,
+  "tabWidth": 2,
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
@@ -8,5 +8,6 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "proseWrap": "always"
+  "proseWrap": "always",
+  "singleAttributePerLine": true
 }
